// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Tabs banVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           常规型 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           卡片型 
          
          
        </span>
      </label>
      
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              <div
                class="t-tabs__nav-item t-is-active t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper t-is-active"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡1
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-is-disabled t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper t-is-disabled"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡2
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡3
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          选项卡1的内容
        </p>
        
      </div>
      <!---->
      <!---->
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs Tabs baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              <div
                class="t-tabs__nav-item t-is-active t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper t-is-active"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡1
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡2
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡3
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          选项卡1的内容，使用 t-tab-pannel 渲染
        </p>
        
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        
        <p
          style="padding: 25px;"
        >
          选项卡2的内容，使用 t-tab-pannel 渲染
        </p>
        
      </div>
      <!---->
      
    </div>
    
  </div>
  <!-- 方式二：使用 list 定义 Tab -->
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              <div
                class="t-tabs__nav-item t-is-active t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper t-is-active"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡一
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡二
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡三
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    
    <div
      class="t-tab-panel"
    >
      <p
        style="padding: 25px;"
      >
        这是选项卡一的内容，使用 t-tabs 渲染
      </p>
    </div>
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`Tabs Tabs combinationVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
  style="width: 100%;"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           常规型 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           卡片型 
          
          
        </span>
      </label>
      
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              <div
                class="t-tabs__nav-item t-is-active t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper t-is-active"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡2
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡3
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡4
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡5
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡6
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡7
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡8
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡9
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡10
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡11
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡12
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡13
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡14
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡15
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡16
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡17
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡18
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡19
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡20
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡21
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          选项卡2
        </p>
        
      </div>
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs Tabs customVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
  style="width: 100%;"
>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
        style="min-height: 48px;"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <!---->
              
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-is-active t-size-m"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  原有选项卡1
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  原有选项卡2
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          原有选项卡1内容
        </p>
        
      </div>
      <!---->
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs Tabs iconVue demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           常规型 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           卡片型 
          
          
        </span>
      </label>
      
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              <div
                class="t-tabs__nav-item t-is-active t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper t-is-active"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    
                    <svg
                      class="t-icon t-icon-home tabs-icon-margin"
                    >
                      <use
                        href="#t-icon-home"
                      />
                    </svg>
                     首页 
                    
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    
                    <svg
                      class="t-icon t-icon-calendar tabs-icon-margin"
                    >
                      <use
                        href="#t-icon-calendar"
                      />
                    </svg>
                     日程 
                    
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    
                    <svg
                      class="t-icon t-icon-layers tabs-icon-margin"
                    >
                      <use
                        href="#t-icon-layers"
                      />
                    </svg>
                     事项 
                    
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          normal选项卡1内容
        </p>
        
      </div>
      <!---->
      <!---->
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs Tabs operationVue demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <p>
      可以动态增加选项卡，仅支持卡片型
    </p>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
        style="min-height: 48px;"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <!---->
              
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-is-active t-size-m"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  原有选项卡
                </span>
                <!---->
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  原有选项卡
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          原有选项卡内容
        </p>
        
      </div>
      <!---->
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs Tabs positionVue demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="top"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           top 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="right"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           right 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="bottom"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           bottom 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="left"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           left 
          
          
        </span>
      </label>
      
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              <div
                class="t-tabs__nav-item t-is-active t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper t-is-active"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡1
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡2
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡3
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          选项卡1
        </p>
        
      </div>
      <!---->
      <!---->
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs Tabs sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="t-tabs"
    >
      
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub>
              <!---->
            </transition-stub>
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub>
              <!---->
            </transition-stub>
            <!---->
          </div>
          
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate3d(0px, 0, 0);"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
                
                <div
                  class="t-tabs__nav-item t-is-active t-size-m"
                >
                  <div
                    class="t-tabs__nav-item-wrapper t-is-active"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡1
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡2
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡3
                    </span>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        
        <div
          class="t-tab-panel"
        >
          
          <p
            style="padding: 25px;"
          >
            选项卡1
          </p>
          
        </div>
        <!---->
        <!---->
        
      </div>
      
    </div>
    <div
      class="t-tabs"
    >
      
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub>
              <!---->
            </transition-stub>
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub>
              <!---->
            </transition-stub>
            <!---->
          </div>
          
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate3d(0px, 0, 0);"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
                
                <div
                  class="t-tabs__nav-item t-is-active t-size-l"
                >
                  <div
                    class="t-tabs__nav-item-wrapper t-is-active"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡1
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-l"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡2
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-l"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡3
                    </span>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        
        <div
          class="t-tab-panel"
        >
          
          <p
            style="padding: 25px;"
          >
            选项卡1
          </p>
          
        </div>
        <!---->
        <!---->
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Tabs Tabs themeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="t-tabs"
    >
      
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub>
              <!---->
            </transition-stub>
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub>
              <!---->
            </transition-stub>
            <!---->
          </div>
          
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate3d(0px, 0, 0);"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
                
                <div
                  class="t-tabs__nav-item t-is-active t-size-m"
                >
                  <div
                    class="t-tabs__nav-item-wrapper t-is-active"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡1
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡2
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡3
                    </span>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        
        <div
          class="t-tab-panel"
        >
          
          <p
            style="padding: 25px;"
          >
            选项卡1
          </p>
          
        </div>
        <!---->
        <!---->
        
      </div>
      
    </div>
    <div
      class="t-tabs"
    >
      
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub>
              <!---->
            </transition-stub>
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub>
              <!---->
            </transition-stub>
            <!---->
          </div>
          
          <div
            class="t-tabs__nav-container t-tabs__nav--card t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate3d(0px, 0, 0);"
              >
                <!---->
                
                <div
                  class="t-tabs__nav-item t-tabs__nav--card t-is-active t-size-m"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡1
                  </span>
                  <!---->
                </div>
                <div
                  class="t-tabs__nav-item t-tabs__nav--card t-size-m"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡2
                  </span>
                  <!---->
                </div>
                <div
                  class="t-tabs__nav-item t-tabs__nav--card t-size-m"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡3
                  </span>
                  <!---->
                </div>
                
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        
        <div
          class="t-tab-panel"
        >
          
          <p
            style="padding: 25px;"
          >
            选项卡1
          </p>
          
        </div>
        <!---->
        <!---->
        
      </div>
      
    </div>
  </div>
</div>
`;
